# facet-probe

./: .env.example  .gitignore  ARTIFACT_LICENSES.md  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  RELEASE_NOTES.md  environment.yml  pyproject.toml  setup.sh
.github/workflows/: tests.yml
artifacts/: README.md  arxiv_audit.md  reproducibility_matrix.md
artifacts/diagnostics/: calibration_mechanism_summary.csv  llm_judge_validation.csv
artifacts/mitigation/: cta_flip_summary.csv  mitigation_menu_summary.json  mitigation_screened_values.json  pareto_frontier_points.json  policy_means.csv  think_budget_sweep.csv
artifacts/odi/: facet_decomposition.csv  irt_input_summary.json  irt_v4_correct_diagnostics.json  irt_v4_correct_per_facet_summary.json  irt_v4_correct_per_item_params.parquet  irt_v4_correct_theta.json  irt_v4_modal_diagnostics.json  irt_v4_modal_per_facet_summary.json  irt_v4_modal_per_item_params.parquet  irt_v4_modal_theta.json  posterior_intervals.csv  screen_filter_metadata.json
artifacts/paper/: additional_facet_results.csv  capability_summary.csv  dataset_summary.csv  image_set_screened_rates.csv  mixed_modality_cells.csv  panel_means.csv  per_facet_per_model.csv  screened_panel_values.json
artifacts/provenance/: cta_think_budget_summary.md  decoder_decomp_screened_audit.md  mitigation_screened_values.md  odi_posterior_interval_audit.md  screened_odi_fit_audit.md  screened_panel_values.md
artifacts/robustness/: decoder_decomp_screened.json  decoder_decomp_screened_by_facet.csv
artifacts/screens/: imageset_position_reference_screen.csv  imageset_position_reference_screen_summary.json
configs/: datasets.yaml  facets.yaml  models.yaml  orderings.yaml  release_artifacts.yaml
data/: README.md
docs/: adapter_templates.md  artifacts.md  extending.md  huggingface_autodiscovery.md  limitations.md  reproduction.md
examples/: python_library_usage.py  quickstart_profile.py  toy_items.jsonl  toy_trials.jsonl
scripts/: audit_release.py  materialize_release_artifacts.py
src/facet_probe/: __init__.py  artifacts.py  cli.py  datasets.py  facets.py  figures.py  hf_inspect.py  irt.py  judging.py  manifests.py  metrics.py  paper_loaders.py  profiles.py  prompts.py  providers.py  reports.py  runner.py  schema.py  scoring.py  templates.py  validation.py
tests/: test_artifacts.py  test_datasets.py  test_examples.py  test_facets.py  test_hf_inspect.py  test_irt.py  test_judging.py  test_manifests.py  test_metrics.py  test_paper_loaders.py  test_paper_run_cli.py  test_profiles.py  test_providers.py  test_release_audit.py  test_reports.py  test_runner.py  test_scoring.py  test_setup_options.py  test_templates.py  test_validation.py
