[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "facet-probe"
version = "0.0.1"
description = "Facet-Probe: auditing order sensitivity in multimodal large language models"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Akshay Paruchuri" },
  { name = "Sanmi Koyejo" },
  { name = "Ehsan Adeli" },
]
keywords = [
  "evaluation",
  "multimodal",
  "order-sensitivity",
  "robustness",
  "benchmarking",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "PyYAML>=6.0.1",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
hf = [
  "datasets>=2.20",
  "huggingface-hub>=0.24",
  "Pillow>=10",
]
models = [
  "accelerate>=1.0",
  "bitsandbytes>=0.43; platform_system != 'Darwin'",
  "qwen-vl-utils>=0.0.11",
  "torch>=2.5",
  "transformers>=4.57",
]
accelerators = [
  "causal-conv1d>=1.4,<1.6; platform_system == 'Linux' and python_version < '3.12'",
  "flash-attn>=2.6; platform_system == 'Linux' and python_version < '3.13'",
  "flash-linear-attention>=0.4.2,<0.5; platform_system == 'Linux' and python_version < '3.12'",
]
providers = [
  "anthropic>=0.35",
  "google-genai>=1.0",
  "openai>=1.40",
]
analysis = [
  "pandas>=2.0",
  "pyarrow>=15",
]
irt = [
  "cloudpickle>=3.0",
  "numpy>=1.26",
  "jax>=0.4",
  "numpyro>=0.15",
  "pymc>=5.15",
  "arviz>=0.17",
  "xarray>=2024.1",
  "h5netcdf>=1.3",
]
dev = [
  "build>=1.2",
  "pytest>=8",
  "ruff>=0.6",
  "twine>=5.1",
]

[project.scripts]
facet-probe = "facet_probe.cli:main"

[project.urls]
Homepage = "https://github.com/yahskapar/facet-probe"
Repository = "https://github.com/yahskapar/facet-probe"

[tool.hatch.build.targets.wheel]
packages = ["src/facet_probe"]

[tool.hatch.build.targets.wheel.force-include]
"configs" = "facet_probe/release/configs"
"artifacts" = "facet_probe/release/artifacts"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/configs",
  "/artifacts",
  "/docs",
  "/examples",
  "/scripts",
  "/.github",
  "/.env.example",
  "/ARTIFACT_LICENSES.md",
  "/CITATION.cff",
  "/CONTRIBUTING.md",
  "/LICENSE",
  "/NOTICE",
  "/README.md",
  "/RELEASE_NOTES.md",
  "/environment.yml",
  "/setup.sh",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
